ui: Fix overlap of class names causing bad behavior in details panels

--- a/http_data/css/kismet.css
+++ b/http_data/css/kismet.css
@@ -249,7 +249,7 @@ div.dataTables_filter {
     top: 10px;
 }
 
-.expander {
+.main-expander {
     position: absolute;
     right: 10px;
     top: 50%;
